[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/C#/AXA.cs


    //지정한 입력모듈의 외부신호에 의해 변환된 A/D값을 읽어옴.
    // lSize          : 지정한 입력 모듈에서 변환된 A/D값을 읽어올 채널의 갯수(AxaiExternalStartADC에 사용한 채널갯수와 동일 해야됨)
    // *lpChannelPos  : 지정한 입력 모듈에서 변환된 A/D값을 읽어올 채널의 Index(AxaiExternalStartADC에 사용한 채널의 Index와 동일 해야됨)
    // lDataSize      : 외부트리거에 의해 A/D변환된 값을 한번에 읽어 올 최대 데이타의 갯수
    // lBuffSize      : 외부에서(사용자 Program) 할당한 Data Buffer의 Size
    // lStartDataPos  : 외부에서(사용자 Program) 할당한 Data Buffer에 저장 시작 할 위치 
    // *dpVolt[]      : A/D변환된 값을 할당 받을 2차원 배열 포인트(dpVlot[Channel][Count])
    // *lpRetDataSize : A/D변환된 값이 Data Buffer에 실제 할당된 갯수
    // *dwpStatus     : A/D변환된 값을 Fifo(H/W Buffer)로 부터 읽을 때 Fifo상태를 반환함.
    [DllImport("AXL.dll")] public static extern uint AxaiExternalReadVoltage(int lModuleNo, int lSize, ref int lpChannelPos, int lDataSize, int lBuffSize, int lStartDataPos, double[,] dpVolt, ref int lpRetDataSize, ref uint upStatus);
	
//========== 출력 모듈 정보 검색 함수 ====================================================================================
    //지정한 출력 채널 번호로 모듈 번호를 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaoInfoGetModuleNoOfChannelNo(int lChannelNo, ref int lpModuleNo);
    
    //아날로그 출력 모듈의 전체 채널 개수를 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaoInfoGetChannelCount(ref int lpChannelCount);

//========== 출력 모듈 설정 및 확인 함수 =================================================================================
    //지정한 출력 채널에 출력 전압 범위를 설정한다
    //==================================================================================================//
    // AXT_SIO_RAO4RB
    // dMinVolt    : -10V
    // dMaxVolt    : 10V
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaoSetRange(int lChannelNo, double dMinVolt, double dMaxVolt);
    
    //지정한 출력 채널의 출력 전압 범위를 확인한다.
    //==================================================================================================//
    // AXT_SIO_RAO4RB
    // *dpMinVolt    : -10V
    // *dpMaxVolt    : 10V
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaoGetRange(int lChannelNo, ref double dpMinVolt, ref double dpMaxVolt);
    
    //지정한 여러 출력 채널에 출력 전압 범위를 설정한다.
    //==================================================================================================//
    // AO4R, AO2Hx
    // dMinVolt    : -10V
    // dMaxVolt    : 10V
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaoSetMultiRange(int lSize, int[] lpChannelNo, double dMinVolt, double dMaxVolt);
    
    //지정한 출력 채널에 입력된 전압이 출력 된다.
    [DllImport("AXL.dll")] public static extern uint AxaoWriteVoltage(int lChannelNo, double dVolt);
    
    //지정한 여러 출력 채널에 입력된 전압이 출력 된다.
    [DllImport("AXL.dll")] public static extern uint AxaoWriteMultiVoltage(int lSize, int[] lpChannelNo, double[] dpVolt);
    
    //지정한 출력 채널에 출력되는 전압 값을 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaoReadVoltage(int lChannelNo, ref double dpVolt);
    
    //지정한 여러 출력 채널에 출력되는 전압 값을 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaoReadMultiVoltage(int lSize, int[] lpChannelNo, double[] dpVolt);
}

